2002-03-24  Marius Vollmer  <mvo@zagadka.ping.de>

	* guile-snarf.in: When the output filename is "-", write to
	stdout.  When no "-o" option is given, use "-" as the output
	filename (i.e., stdout).  Only 'clean' the inputfile or remove the
	output file on error when the output file name is not "-".  Define
	the preprocessor macro SCM_MAGIC_SNARFER while snarfing.

	* Makefile.am (.c.x): Pass "-o $@" to guile-snarf.

2002-03-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL, SCM_APPLY): Eliminated labels wrongnumargs
	and the corresponding goto statements.  Removed redundant code.

2002-03-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Minimized scope of variable arg2.
	Eliminated redundant SCM_IMP check.  Exlined call to EVALCAR.
	Re-enabled handing of rpsubrs and asubrs.

2002-03-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SIDEVAL): Removed.

	(SCM_CEVAL): Minimized scope of variable orig_sym.  Eliminated
	goto-labels cdrxnoap, cdrxbegin and nontoplevel_cdrxnoap.  Changed
	argument checking order for set! to locals, variables and symbols.
	Improvements to control structure.  Removed some uses of arg1 and
	arg2 as temporary variables.

2002-03-15  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* guile-snarf.in: Remove "--compat=1.4" support.
	Add "-d" and "-D" support.

	(deprecated_list): New var.
	(compat_mode_clean_xxx): Delete.
	(grep_deprecated): New func.
	("main"): If "-d" or "-D", call `grep_deprecated'.

2002-03-15  Neil Jerram  <neil@ossau.uklinux.net>

	* hooks.h: Change scm_t_c_hookype_t everywhere to
	scm_t_c_hook_type.

	Docstring fixes:

	* strings.c (scm_string_p): Change unnecessary `iff' to `if'.

	* ports.c (scm_sys_make_void_port): Use `@file'.

	* numbers.c (scm_number_p, scm_real_p): Use `otherwise' rather
	than `else'.

	* macros.c (scm_makmacro): Don't say that the form replaces its
	source, because it doesn't.
	(scm_makmmacro): Clarify difference between this and scm_makmacro.
